tests/rosetta/transpiler/OCaml/angle-difference-between-two-bearings-2.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/angle-difference-between-two-bearings-2.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Angle-difference-between-two-bearings-2" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/angle-difference-between-two-bearings-2.ml", line 30, characters 16-20:
30 |   __ret := (((((diff mod 360.0) +. 360.0) +. 180.0) mod 360.0) -. 180.0); raise Return
                     ^^^^
Error: This expression has type float but an expression was expected of type
         int
